work on showcase paper

--- a/Labs/ScientificWriting/Script/writing.tex
+++ b/Labs/ScientificWriting/Script/writing.tex
@@ -115,7 +115,7 @@ As was mentioned before, this section is the place where you may tell the reader
 
 \chapter{Showcase: A commented paper}
 \begin{center}
-	\huge{Title} \\
+	\huge{Tropical forests: Finding the real reason for species richness} \\
 	\vspace{0.3em}
 	\large{Florian Hartig and Severin Hauenstein}\\
 	\vspace{0.3em}
@@ -134,7 +134,33 @@ than all alternatives we test. Specifically ...
 tropics is mainly drive by higher productivity. These results challenge some long held
 ideas about geographical stability being the main reason for global diversity
 patterns. They also have important practical applications for mitigation of climate
-change, as ...
+change, as ...\\
+\noindent\textbf{Keywords:}  \\
+
+\noindent\Large{\textbf{Introduction}}\\
+
+\noindent\Large{\textbf{Methods}}\\
+
+\noindent\Large{\textbf{Results}}\\
+
+\noindent\Large{\textbf{Discussion}}\\
+In this study, we used method X to test whether prevalence of A
+is associated to factor B. Our main result is that there is a
+significant correlation of B with A. This correlation, however, was
+only found when factor C was also present.
+
+Our findings support earlier findings of (X, 2005) and (Y, 2002)
+who also found a positive correlation between A and B. The fact
+that this correlation was only present in samples under conditions
+C may also explain previous opposite results such as (ZZ,
+2006,2008), as neither of these previous studies controlled for C.
+The reason for this positive association and the fact that it is
+affected by C is still unknown. We speculate that mechanism R
+could be a reason for this. This idea is given further support by
+the observation that the correlation between A and B is affected
+by C. Such an effect would be expected if R is really the cause of
+this Correlation, as R is dependent on C (XAY, 1968).
+
 
 
 
