--- a/Labs/ScientificWriting/Script/writing.tex
+++ b/Labs/ScientificWriting/Script/writing.tex
@@ -141,23 +141,36 @@ As was mentioned before, this section is the place where you may tell the reader
 \end{center}
 Tropical forests are some of the most species-rich ecosystems\marginnote{Set the scene} of the world.
 The reason for this, \textbf{however}, is still widely debated\marginnote{Raise the problem}. Hypotheses range from processes related to productivity over environmental stability to the historical changes in geography.
-\textbf{Here}\marginnote{Introduce your approach}, we tried to contrast these different hypotheses by using data from ... together with ... (fancy new method).
+\textbf{Here}\marginnote{Introduce your approach}, we contrasted these different hypotheses by using data from ... together with ... (fancy new method).
 \textbf{We find that}\marginnote{State your results} hypothesis X seems to be significantly better supported by our data
-than all alternatives we test. Specifically ... 
+than all alternatives we tested. Specifically ... 
 \textbf{In conclusion}\marginnote{Give your conclusions and discuss wider significance}, our study supports the hypothesis that species diversity in the
-tropics is mainly drive by higher productivity. These results challenge some long held
+tropics is mainly driven by higher productivity. These results challenge some long held
 ideas about geographical stability being the main reason for global diversity
 patterns. They also have important practical applications for mitigation of climate
 change, as ...\\
-\noindent\textbf{Keywords:}  \\
+\noindent\textbf{Keywords:} Biodiversity -- Primary production -- Floristic structure ...\\
 
-\noindent\Large{\textbf{Introduction}}\\
+\noindent\textbf{Introduction}\\
+Tropical forests provide a suitable habitat to a vast variety of species. According to XY (19XX) tropical forests make up fo x \% of the planet's biodiversity.\\
+...
 
-\noindent\Large{\textbf{Methods}}\\
+Many ecologists have aimed at explaining this phenomena and a large number of hypotheses has been published in recent years (e.g. ABC, 19XX; D\&E, 20XX; FG, 20XX). However, not all of whom have made convincing arguments. To order the state of knowledge validation and comparison of the studies is desperately needed.\\
+...
 
-\noindent\Large{\textbf{Results}}\\
+In this short note, we compare a set of pre-selected hypotheses published by ABC (19XX), D\&E (20XX), FG (20XX) and ... and present a validation of the used approaches. For the latter we used X data provided by XYZ (2014)\\
+... 
 
-\noindent\Large{\textbf{Discussion}}\\
+We first test X in order to find the difference in Y. As an alternative approach we choose to look at Z for the purpose of XY. Specifically we are interested in species Y. Furthermore, the validation of the hypotheses will provide information about ...\\
+...\\
+In the following we briefly outline the concepts of ... and present our validation approach.\\
+...
+
+\noindent\textbf{Methods}\\
+
+\noindent\textbf{Results}\\
+
+\noindent\textbf{Discussion}\\
 In this study, we used method X to test whether prevalence of A
 is associated to factor B. Our main result is that there is a
 significant correlation of B with A. This correlation, however, was
